--- a/style.css
+++ b/style.css
@@ -4,24 +4,24 @@ body {
     color: #333;
     font-family: Lato, sans-serif;
   }
-  .aaa {
+  .matrix {
     width: 500px;
     margin: 0 auto;
     display: block;
     text-align: right;
   }
-  .aaa img {
+  .matrix img {
     width: 100%;
   }
-  .aaa .more_inf {
+  .matrix .more_inf {
     font-family: fantasy, cursive;
   }
   
   @media (max-width:768px) {
-  .aaa { text-align: center;
+  .matrix { text-align: center;
   }
   }
-  .centered-main-page-element {
+  .to-do-list {
     display: block;
     width: 500px;
     margin: 0 auto 0;
@@ -31,7 +31,7 @@ body {
     display: inline-block;
     flex-grow: 1
   }
-  .task-row-wrapper {
+  .new-task-wrapper {
     display: flex;
   }
   ul {
@@ -58,7 +58,7 @@ body {
   }
   /* Heading */
   h3,
-  label[for="new-task"] {
+  label[for="new-task_input"] {
     color: #333;
     font-weight: 700;
     font-size: 15px;
@@ -84,11 +84,11 @@ body {
   }
   
   /* New Task */
-  label[for="new-task"] {
+  label[for="new-task_input"] {
     display: block;
     margin: 0 0 20px;
   }
-  input#new-task {
+  input#new-task_input {
     width: 318px;
   }
   
@@ -118,12 +118,12 @@ body {
   li >    input[type="text"] {
     width: 226px
   }
-  button.delete img {
+  button.delete_button img {
     height: 2em;
     transform: rotateZ(45deg);
     transition: transform 200ms ease-in;
   }
-  button.delete img:hover {
+  button.delete_button img:hover {
     transform: rotateZ(0);
   }
   
