--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 /* Basic Style */
-body {
+  .body-container {
     background-color: #f8f8f8;
     color: #333;
     font-family: Lato, sans-serif;
@@ -10,10 +10,10 @@ body {
     display: block;
     text-align: right;
   }
-  .matrix img {
+  .matrix-img {
     width: 100%;
   }
-  .matrix .more_inf {
+  .more_inf {
     font-family: fantasy, cursive;
   }
   
@@ -26,7 +26,7 @@ body {
     width: 500px;
     margin: 0 auto 0;
   }
-  .task {
+  .task_input {
     width: 56%;
     display: inline-block;
     flex-grow: 1
@@ -34,11 +34,11 @@ body {
   .new-task-wrapper {
     display: flex;
   }
-  ul {
+  .tasks-container {
     margin:0;
     padding: 0px;
   }
-  li, h3 {
+  .task-item, h3 {
     list-style:none;
   }
   input,button{
@@ -57,7 +57,7 @@ body {
     color: #3a3a3a;
   }
   /* Heading */
-  h3,
+ .title,
   label[for="new-task_input"] {
     color: #333;
     font-weight: 700;
@@ -67,7 +67,7 @@ body {
     margin: 0;
     text-transform: uppercase;
   }
-  input[type="text"] {
+  .task_input {
     margin: 0;
     font-size: 18px;
     line-height: 18px;
@@ -79,7 +79,7 @@ body {
     font-family: Lato, sans-serif;
     color: #888;
   }
-  input[type="text"]:focus {
+  .task_input:focus {
     color: #333;
   }
   
@@ -88,12 +88,12 @@ body {
     display: block;
     margin: 0 0 20px;
   }
-  input#new-task_input {
+  #new-task_input {
     width: 318px;
   }
   
   /* Task list */
-  li {
+  .task-item {
     overflow: hidden;
     padding: 20px 0;
     border-bottom: 1px solid #eee;
@@ -102,47 +102,47 @@ body {
     justify-content: space-between;
     align-items: center;
   }
-  li > * {
+  .task-item > * {
     vertical-align: middle;
   }
   
-  li > input[type="checkbox"] {
+  .task-item > input[type="checkbox"] {
     margin: 0 10px;
   }
-  li > label {
+  .task-item > label {
     padding-left: 10px;
     box-sizing: border-box;
     font-size: 18px;
     width: 226px;
   }
-  li >    input[type="text"] {
+  .task-item >    input[type="text"] {
     width: 226px
   }
-  button.delete_button img {
+  .delete_button_img {
     height: 2em;
     transform: rotateZ(45deg);
     transition: transform 200ms ease-in;
   }
-  button.delete_button img:hover {
+  .delete_button_img:hover {
     transform: rotateZ(0);
   }
   
   /* Completed */
-  ul#completed-tasks label {
+  .tasks-container#completed-tasks label {
     text-decoration: line-through;
     color: #888;
   }
   
   /* Edit Task */
-  ul li input[type=text] {
+  .tasks-container .task-item input[type=text] {
     display:none
   }
   
-  ul li.edit-mode input[type=text] {
+  .tasks-container .task-item.edit-mode input[type=text] {
     display:inline-block;
     width:224px
   }
   
-  ul li.edit-mode label {
+  .tasks-container .task-item.edit-mode label {
     display:none;
   }
