--- a/style.css
+++ b/style.css
@@ -49,11 +49,13 @@
     padding: 0px;
   }
   
-  .task-item, h3 {
+  .task-item, 
+  h3 {
     list-style: none;
   }
 
-  input,button{
+  input,
+  button{
     outline: none;
   }
 
@@ -115,7 +117,6 @@
     overflow: hidden;
     padding: 20px 0;
     border-bottom: 1px solid #eee;
-  
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -136,7 +137,7 @@
     width: 226px;
   }
 
-  .task-item >    input[type="text"] {
+  .task-item > input[type="text"] {
     width: 226px
   }
 
