--- a/style.css
+++ b/style.css
@@ -12,11 +12,11 @@
     text-align: right;
   }
 
-  .matrix-img {
+  .matrix__img {
     width: 100%;
   }
 
-  .matrix-info {
+  .matrix__nfo {
     font-family: fantasy, cursive;
   }
   
@@ -28,28 +28,28 @@
 
   }
 
-  .to-do-list {
+  .todo {
     display: block;
     width: 500px;
     margin: 0 auto 0;
   }
 
-  .task {
+  .todo__task {
     width: 56%;
     display: inline-block;
     flex-grow: 1;
   }
 
-  .new-task-wrapper {
+  .add-section__content {
     display: flex;
   }
 
-  .tasks-container {
+  .todo__list {
     margin: 0;
     padding: 0px;
   }
   
-  .task-item, 
+  .todo__item, 
   h3 {
     list-style: none;
   }
@@ -75,7 +75,7 @@
 
   /* Heading */
  .title,
-  label[for="new-task_input"] {
+  label[for="new-task"] {
     color: #333;
     font-weight: 700;
     font-size: 15px;
@@ -85,7 +85,7 @@
     text-transform: uppercase;
   }
 
-  .task_input {
+  .task-input {
     margin: 0;
     font-size: 18px;
     line-height: 18px;
@@ -98,22 +98,22 @@
     color: #888;
   }
 
-  .task_input:focus {
+  .task-input:focus {
     color: #333;
   }
   
   /* New Task */
-  label[for="new-task_input"] {
+  label[for="new-task"] {
     display: block;
     margin: 0 0 20px;
   }
 
-  #new-task_input {
+  #new-task {
     width: 318px;
   }
   
   /* Task list */
-  .task-item {
+  .todo__item {
     overflow: hidden;
     padding: 20px 0;
     border-bottom: 1px solid #eee;
@@ -122,51 +122,51 @@
     align-items: center;
   }
 
-  .task-item > * {
+  .todo__item > * {
     vertical-align: middle;
   }
   
-  .task-item > input[type="checkbox"] {
+  .todo__item > .todo__checkbox {
     margin: 0 10px;
   }
 
-  .task-item > label {
+  .todo__item > label {
     padding-left: 10px;
     box-sizing: border-box;
     font-size: 18px;
     width: 226px;
   }
 
-  .task-item > .task_input {
+  .todo__item > .task-input {
     width: 226px;
   }
 
-  .delete_button_img {
+  .todo__delete-button-img {
     height: 2em;
     transform: rotateZ(45deg);
     transition: transform 200ms ease-in;
   }
 
-  .delete_button_img:hover {
+  .todo__delete-button-img:hover {
     transform: rotateZ(0);
   }
   
   /* Completed */
-  .tasks-container#completed-tasks label {
+  .todo__list#completed-tasks label {
     text-decoration: line-through;
     color: #888;
   }
   
   /* Edit Task */
-  .tasks-container .task-item .task_input {
+  .todo__list .todo__item .task-input {
     display: none;
   }
   
-  .tasks-container .task-item.edit-mode .task_input {
+  .todo__list .todo__item.edit-mode .task-input {
     display: inline-block;
     width: 224px;
   }
   
-  .tasks-container .task-item.edit-mode label {
+  .todo__list .todo__item.edit-mode label {
     display: none;
   }
